<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_main"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.jd.settingstab.MainActivity">



    <TextView

        android:layout_width="match_parent"

        android:layout_height="30dp"

        android:id = "@+id/title_type"

        android:textStyle="bold"

        />



    <ListView

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"

        android:id="@+id/listViewType"

        android:layout_below="@id/title_type"
        android:headerDividersEnabled="false"
        android:footerDividersEnabled="false" />



</RelativeLayout>